--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
   text-align: center;
 
 }
-.buttonTake {
-  background-color:  #DAD8D8;;
+.buttonTake button{
+  background-color:  #DAD8D8;
   border:  1px solid #FFFFFF;
   color:black;
   position: absolute;
@@ -18,19 +18,19 @@ body {
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   text-align: center;
-  font-size: 36px;
+  font-size: 34px;
   line-height: 100px;
   /* display: flex; */
   align-items: center;
   /* margin: 4px 2px; */
   cursor: pointer;
 }
-.buttonTake:hover {
-  background-color: whiteSmoke;
+.buttonTake button:hover {
+  background-color: #B5B5B5;
   color: black;
   align-content: center;
 }
-.buttonTeach {
+.buttonTeach button{
   background-color:  #DAD8D8;;
   border:  1px solid #FFFFFF;
   color:black;
@@ -42,14 +42,14 @@ body {
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   text-align: center;
-  font-size: 36px;
+  font-size: 34px;
   line-height: 100px;
   /* display: flex; */
   align-items: center;
   cursor: pointer;
 }
-.buttonTeach:hover {
-  background-color: whiteSmoke;
+.buttonTeach button:hover {
+  background-color: #B5B5B5;
   color: black;
   align-content: center;
 }
@@ -124,4 +124,128 @@ body {
   background: #DAD8D8;
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
+}
+.step1{
+  position: absolute;
+  width: 313px;
+  height: 33px;
+  left: 39px;
+  top: 140px;
+  font-size: 22px;
+  line-height: 33px;
+  text-align: center;
+  color: #000000;
+}
+.rectangle1{
+  position: absolute;
+  width: 313px;
+  height: 400px;
+  left: 39px;
+  top: 201px; 
+  background: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.step2{
+  position: absolute;
+  width: 313px;
+  height: 33px;
+  left: 384px;
+  top: 140px;
+  font-size: 22px;
+  line-height: 33px;
+  text-align: center;
+  color: #000000;
+}
+.rectangle2{
+  position: absolute;
+  width: 313px;
+  height: 400px;
+  left: 384px;
+  top: 201px;
+  background: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+
+}
+.step3{
+  position: absolute;
+  width: 313px;
+  height: 33px;
+  left: 729px;
+  top: 140px;
+  font-size: 22px;
+  line-height: 33px;
+  text-align: center;
+  color: #000000;
+}
+.rectangle3{
+  position: absolute;
+  width: 313px;
+  height: 400px;
+  left: 729px;
+  top: 201px;
+  background: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.step4{
+  position: absolute;
+  width: 313px;
+  height: 33px;
+  left: 1081px;
+  top: 140px;
+  font-size: 22px;
+  line-height: 33px;
+  text-align: center;
+  color: #000000;
+}
+.rectangle4{
+  position: absolute;
+  width: 313px;
+  height: 400px;
+  left: 1081px;
+  top: 201px;
+  background: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.step5{
+  position: absolute;
+  width: 563px;
+  height: 33px;
+  left: 191px;
+  top: 600px;
+  font-size: 22px;
+  line-height: 33px;
+  text-align: center;
+  color: #000000;
+}
+.rectangle5{
+  position: absolute;
+  width: 563px;
+  height: 88px;
+  left: 191px;
+  top: 665px;
+  background: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+
+}
+.doneButton button{
+  position: absolute;
+  width: 292px;
+  height: 71px;
+  left: 992px;
+  top: 739px;
+  background: #A2DBAF;
+  font-size: 28px;
+  line-height: 71px;
+  text-align: center;
+  color: black;
+}
+.doneButton button:hover{
+  background-color: #66C25C;
+  color: black;
+  align-content: center;
 }
