--- a/style.css
+++ b/style.css
@@ -24,15 +24,15 @@
   font-style: normal;
 
 }
-
 body {
   font-family: 'robotoregular';
   font-style: normal;
   font-weight: normal;
   background:  #D1D6E8;;
   text-align: center;
-
 }
+
+/* Home Page */
 .buttonTake button{
   background-color:  #DAD8D8;
   border:  1px solid #FFFFFF;
@@ -151,6 +151,8 @@ body {
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
 }
+
+/* Teach a Class */
 .step1{
   position: absolute;
   width: 313px;
@@ -171,6 +173,86 @@ body {
   background: #DAD8D8;
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
+}
+.Art button{
+  position: absolute;
+  width: 186px;
+  height: 54px;
+  left: 103px;
+  top: 225px;
+  background: #C4C4C4;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  text-align:center;
+  font-size: 20px;
+}
+.Art button:hover{
+  background-color: #9F9F9F;
+  color: black;
+  align-content: center;
+}
+.Beauty button{
+  position: absolute;
+  width: 186px;
+  height: 54px;
+  left: 103px;
+  top: 299px;
+  background: #C4C4C4;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  text-align:center;
+  font-size: 20px;
+}
+.Beauty button:hover{
+  background-color: #9F9F9F;
+  color: black;
+  align-content: center;
+}
+.Cooking button{
+  position: absolute;
+  width: 186px;
+  height: 54px;
+  left: 103px;
+  top: 373px;
+  background: #C4C4C4;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  text-align:center;
+  font-size: 20px;
+}
+.Cooking button:hover{
+  background-color: #9F9F9F;
+  color: black;
+  align-content: center;
+}
+.Fitness button{
+  position: absolute;
+  width: 186px;
+  height: 54px;
+  left: 103px;
+  top: 447px;
+  background: #C4C4C4;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  text-align:center;
+  font-size: 20px;
+}
+.Fitness button:hover{
+  background-color: #9F9F9F;
+  color: black;
+  align-content: center;
+}
+.Other button{
+  position: absolute;
+  width: 186px;
+  height: 55px;
+  left: 103px;
+  top: 521px;
+  background: #C4C4C4;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  text-align:center;
+  font-size: 20px;
+}
+.Other button:hover{
+  background-color: #9F9F9F;
+  color: black;
+  align-content: center;
 }
 .step2{
   position: absolute;
@@ -275,4 +357,43 @@ body {
   background-color: #66C25C;
   color: black;
   align-content: center;
+}
+/* Take a Class */
+.teacherRanking{
+  position: absolute;
+  width: 326px;
+  height: 500px;
+  left: 59px;
+  top: 200px;
+  background: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+#rank{
+  position: absolute;
+  width: 70px;
+  height:15px;
+  left:20px;
+  top:5px;
+  font-size:18px;
+  line-height: 15px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #000000;
+}
+#top{
+  text-align: center;
+  font-size: 18px;
+}
+#points{
+  position: absolute;
+  width: 70px;
+  height: 15px;
+  left: 240px;
+  top: 5px;
+  font-size:18px;
+  line-height:15px;
+  align-items: center;
+  text-align: center;
 }
