--- a/style.css
+++ b/style.css
@@ -397,3 +397,64 @@ body {
   align-items: center;
   text-align: center;
 }
+.cookingClasses{
+  position: absolute;
+  width: 145px;
+  height: 500px;
+  left: 405px;
+  top: 200px;
+  background: #DAD8D8;
+  text-align:center;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.artClasses{
+  position: absolute;
+  width: 145px;
+  height: 500px;
+  top: 200px;
+  left: 559px;
+  background: #DAD8D8;
+  text-align: center;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.beautyClasses{
+  position: absolute;
+  width: 145px;
+  height: 500px;
+  top: 200px;
+  left: 721px;
+  background: #DAD8D8;
+  text-align: center;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.fitnessClasses{
+  position: absolute;
+  width: 145px;
+  height: 500px;
+  top: 200px;
+  left: 887px;
+  background: #DAD8D8;
+  text-align: center;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+#joinFriends{
+  position: absolute;
+  width: 219px;
+  height: 42px;
+  left: 1073px;
+  top: 160px;
+}
+#friendClasses{
+  position: absolute;
+  width: 334px;
+  height: 500px;
+  left: 1050px;
+  top: 185px;
+  background: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
