--- a/style.css
+++ b/style.css
@@ -359,6 +359,22 @@ body {
   align-content: center;
 }
 /* Take a Class */
+.search input[type=text]{
+  position: absolute;
+  width:305px;
+  height:40px;
+  top:90px;
+  left:565px;
+  font-size:20px;
+}
+.searchTeacher{
+  position: absolute;
+  width:326px;
+  height:40px;
+  left:59px;
+  top:140px;
+  text-align:center;
+}
 .teacherRanking{
   position: absolute;
   width: 326px;
@@ -397,6 +413,14 @@ body {
   align-items: center;
   text-align: center;
 }
+.browse{
+  position: absolute;
+  width: 625px;
+  height:30px;
+  left:405px;
+  top:140px;
+  text-align:center;
+}
 .cookingClasses{
   position: absolute;
   width: 145px;
@@ -413,7 +437,7 @@ body {
   width: 145px;
   height: 500px;
   top: 200px;
-  left: 559px;
+  left: 565px;
   background: #DAD8D8;
   text-align: center;
   border: 1px solid #FFFFFF;
@@ -424,7 +448,7 @@ body {
   width: 145px;
   height: 500px;
   top: 200px;
-  left: 721px;
+  left: 725px;
   background: #DAD8D8;
   text-align: center;
   border: 1px solid #FFFFFF;
@@ -435,19 +459,27 @@ body {
   width: 145px;
   height: 500px;
   top: 200px;
-  left: 887px;
+  left: 885px;
   background: #DAD8D8;
   text-align: center;
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
 }
-#joinFriends{
+.join {
+  position: absolute;
+  width:334px;
+  height:30px;
+  left:1050px;
+  top:140px;
+  text-align:center;
+}
+/* #joinFriends{
   position: absolute;
   width: 219px;
   height: 42px;
   left: 1073px;
   top: 160px;
-}
+} */
 #friendClasses{
   position: absolute;
   width: 334px;
@@ -457,4 +489,8 @@ body {
   background: #DAD8D8;
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
+  line-height:40px;
+  text-align:center;
+  align-items:center;
+
 }
