--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
   align-content: center;
 }
 .buttonTeach button{
-  background-color:  #DAD8D8;;
+  background-color:  #DAD8D8;
   border:  1px solid #FFFFFF;
   color:black;
   position: absolute;
@@ -296,7 +296,88 @@ body {
   background: #DAD8D8;
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
+
 }
+.btn1{
+  /* border: 2px solid gray; */
+  background:#C4C4C4;
+  font-size:18px;
+  position:absolute;
+  width:200px;
+  height:75px;
+  left:56px;
+  top:24px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor:pointer;
+
+}
+#file1 {
+  font-size:20px;
+  position: absolute;
+  left: 56px;
+  top: 24px;
+  width:200px;
+  height:75px;
+  opacity: 0;
+}
+.btn2{
+  background:#C4C4C4;
+  font-size:18px;
+  position:absolute;
+  width:200px;
+  height:75px;
+  left:56px;
+  top:116px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+#file2{
+  font-size:20px;
+  position: absolute;
+  left: 56px;
+  top:116px;
+  width:200px;
+  height:75px;
+  opacity: 0;
+}
+.btn3{
+  background:#C4C4C4;
+  font-size:18px;
+  position:absolute;
+  width:200px;
+  height:75px;
+  left:56px;
+  top:208px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+#file3{
+  font-size:20px;
+  position: absolute;
+  left: 56px;
+  top:208px;
+  width:200px;
+  height:75px;
+  opacity: 0;
+}
+.btn4{
+  background:#C4C4C4;
+  font-size:18px;
+  position:absolute;
+  width:200px;
+  height:75px;
+  left:56px;
+  top:300px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+#file4{
+  font-size:20px;
+  position: absolute;
+  left: 56px;
+  top:300px;
+  width:200px;
+  height:75px;
+  opacity: 0;
+}
+
 .step4{
   position: absolute;
   width: 313px;
@@ -329,16 +410,17 @@ body {
   text-align: center;
   color: #000000;
 }
-.rectangle5{
-  position: absolute;
-  width: 563px;
-  height: 88px;
+#classtime{
+  position:absolute;
+  width:563px;
+  height:88px;
   left: 191px;
   top: 665px;
-  background: #DAD8D8;
+  font-size:18px;
+  background:#DAD8D8;
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
-
+  text-align:center;
 }
 .doneButton button{
   position: absolute;
@@ -359,6 +441,23 @@ body {
   align-content: center;
 }
 /* Take a Class */
+.backButton button{
+  position: absolute;
+  width: 120px;
+  height:50px;
+  left:59px;
+  top:40px;
+  background-color:#585858;
+  color: white;
+  font-size:16px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.backButton button:hover {
+  background-color: #313131;
+  color: white;
+  align-content: center;
+}
 .search input[type=text]{
   position: absolute;
   width:305px;
