--- a/style.css
+++ b/style.css
@@ -564,6 +564,9 @@ body {
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
 }
+.chloe{
+  
+}
 .join {
   position: absolute;
   width:334px;
