--- a/style.css
+++ b/style.css
@@ -596,6 +596,29 @@ body {
 /* Fitness Class */
 .video{
   position: absolute;
-  left:100px;
+  left:50px;
   top:100px;
+}
+#container {
+  position:absolute;
+  top:100px;
+  left:700px;
+	margin: 0px auto;
+	width:475px;
+	height: 345px;
+  border: 1px solid #FFFFFF;
+}
+#videoElement {
+	width: 450px;
+	height: 345px;
+	/* background-color: #DAD8D8; */
+}
+#stats{
+  position: absolute;
+  top:100px;
+  left:1175px;
+  width: 200px;
+  height:345px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
 }
