--- a/style.css
+++ b/style.css
@@ -626,14 +626,14 @@ body {
   position:absolute;
   top:500px;
   left:50px;
-  width:275px;
+  width:215px;
   height:175px;
   border: 1px solid #FFFFFF;
 }
 #stats1{
   position: absolute;
   top:500px;
-  left:326px;
+  left:265px;
   background-color: #DAD8D8;
   border: 1px solid #FFFFFF;
   width:100px;
@@ -643,18 +643,73 @@ body {
 #img2{
   position:absolute;
   top:500px;
-  left:450px;
-  width:275px;
+  left:390px;
+  width:215px;
   height:175px;
   border: 1px solid #FFFFFF;
 }
 #stats2{
   position:absolute;
   top:500px;
-  left:725px;
+  left:605px;
   background-color: #DAD8D8;
   border: 1px solid #FFFFFF;
   width:100px;
   height:175px;
   font-size:14px;
 }
+#img3{
+  position:absolute;
+  top:500px;
+  left:730px;
+  width:215px;
+  height:175px;
+  border: 1px solid #FFFFFF;
+}
+#stats3{
+  position:absolute;
+  top:500px;
+  left:945px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  width:100px;
+  height:175px;
+  font-size:14px;
+}
+#img4{
+  position:absolute;
+  top:500px;
+  left:1070px;
+  width:215px;
+  height:175px;
+  border: 1px solid #FFFFFF;
+}
+#stats4{
+  position:absolute;
+  top:500px;
+  left:1285px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  width:100px;
+  height:175px;
+  font-size:14px;
+}
+.leaveButton button{
+  position:absolute;
+  top:725px;
+  left:675px;
+  width:100px;
+  height:55px;
+  background-color:#585858;
+  color: white;
+  font-size:16px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.leaveButton button:hover{
+  background-color: #313131;
+  color: white;
+  align-content: center;
+
+}
+  
