--- a/style.css
+++ b/style.css
@@ -819,14 +819,128 @@ body {
 /* Teach Fitness */
 #container2{
   position:absolute;
-  top:100px;
+  top:80px;
   left:50px;
   margin: 0px auto;
 	width:475px;
-	height: 345px;
+	height: 200px;
   border: 1px solid #FFFFFF;
 }
-#videoElement2 {
-	width: 450px;
-  height: 345px;
+#videoElement2{
+	width: 475px;
+  height: 200px;
+}
+#tstats{
+  position: absolute;
+  top:80px;
+  left:525px;
+  width: 180px;
+  height:200px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+}
+#fstud1{
+  position:absolute;
+  top:80px;
+  left:735px;
+  width:475px;
+  height:200px;
+  border: 1px solid #FFFFFF;
+}
+#tstats1{
+  position: absolute;
+  top:80px;
+  left:1210px;
+  width: 180px;
+  height:200px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+}
+#fstud2{
+  position:absolute;
+  top:310px;
+  left:50px;
+  width:475px;
+  height:200px;
+  border: 1px solid #FFFFFF;
+}
+#tstats2{
+  position: absolute;
+  top:310px;
+  left:525px;
+  width: 180px;
+  height:200px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+}
+#fstud3{
+  position: absolute;
+  top:310px;
+  left:735px;
+  width:475px;
+  height:200px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+}
+#tstats3{
+  position: absolute;
+  top:310px;
+  left:1210px;
+  width: 180px;
+  height:200px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+}
+#fstud4{
+  position: absolute;
+  top:540px;
+  left:50px;
+  width:475px;
+  height:200px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+}
+#tstats4{
+  position: absolute;
+  top:540px;
+  left:525px;
+  width: 180px;
+  height:200px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+}
+#fstud5{
+  position: absolute;
+  top:540px;
+  left:735px;
+  width: 180px;
+  height:200px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+}
+#tstats5{
+  position: absolute;
+  top:540px;
+  left:1210px;
+  width: 180px;
+  height:200px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+}
+.endButton button{
+  position:absolute;
+  top:750px;
+  left:670px;
+  width:100px;
+  height:55px;
+  background-color:#585858;
+  color: white;
+  font-size:16px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.endButton button:hover{
+  background-color: #313131;
+  color: white;
+  align-content: center;
 }
