--- a/style.css
+++ b/style.css
@@ -944,3 +944,21 @@ body {
   color: white;
   align-content: center;
 }
+/* Cooking Info */
+.backButton1 button{
+  position: absolute;
+  width: 120px;
+  height:50px;
+  left:59px;
+  top:40px;
+  background-color:#585858;
+  color: white;
+  font-size:16px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.backButton1 button:hover {
+  background-color: #313131;
+  color: white;
+  align-content: center;
+}
