change wording to say your schedule

--- a/style.css
+++ b/style.css
@@ -1030,7 +1030,7 @@ body {
   color: black;
   align-content: center;
 }
-/* Fitness Info *
+/* Fitness Info */
 #fMaterials{
   position: absolute;
   top:500px;
