--- a/style.css
+++ b/style.css
@@ -954,6 +954,134 @@ body {
   color: white;
   align-content: center;
 }
+/*Teach Art*/
+#container3 {
+  position:absolute;
+  top:100px;
+  left:100px;
+  margin: 0px auto;
+  width:475px;
+  height: 345px;
+  border: 1px solid #FFFFFF;
+}
+#taimg1{
+  position:absolute;
+  top:100px;
+  left:590px;
+  width:270px;
+  height:210px;
+  border: 1px solid #FFFFFF;
+}
+#taimg2{
+  position:absolute;
+  top:100px;
+  left:875px;
+  width:270px;
+  height:210px;
+  border: 1px solid #FFFFFF;
+}
+#taimg3{
+  position:absolute;
+  top:100px;
+  left:1160px; 
+  width:270px;
+  height:210px;
+  border: 1px solid #FFFFFF;
+}
+#taimg4{
+  position:absolute;
+  top:400px;
+  left:590px;
+  width:270px;
+  height:210px;
+  border: 1px solid #FFFFFF;
+}
+#taimg5{
+  position:absolute;
+  top:400px;
+  left:875px;
+  width:270px;
+  height:210px;
+  border: 1px solid #FFFFFF;
+}
+#taimg6{
+  position:absolute;
+  top:400px;
+  left:1160px;
+  width:270px;
+  height:210px;
+  border: 1px solid #FFFFFF;
+}
+#feedback1{
+  position:absolute;
+  top:330px;
+  left:590px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  width:270px;
+  height:50px;
+  font-size:14px;
+} 
+#feedback2{
+  position:absolute;
+  top:330px;
+  left:875px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  width:270px;
+  height:50px;
+  font-size:14px;
+} 
+#feedback3{
+  position:absolute;
+  top:330px;
+  left:1160px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  width:270px;
+  height:50px;
+  font-size:14px;
+} 
+#feedback4{
+  position:absolute;
+  top:630px;
+  left:590px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  width:270px;
+  height:50px;
+  font-size:14px;
+} 
+#feedback5{
+  position:absolute;
+  top:630px;
+  left:875px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  width:270px;
+  height:50px;
+  font-size:14px;
+} 
+#feedback6{
+  position:absolute;
+  top:630px;
+  left:1160px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  width:270px;
+  height:50px;
+  font-size:14px;
+} 
+#artinstructions{
+  position:absolute;
+  top:470px;
+  left:165px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  width:350px;
+  height:300px;
+  font-size:14px;
+} 
 /* Cooking Info */
 .backButton1 button{
   position: absolute;
