--- a/style.css
+++ b/style.css
@@ -1168,3 +1168,95 @@ body {
   background-color: #DAD8D8;
   border: 1px solid #FFFFFF;
 }
+.greenRectangle{
+  position:absolute;
+  top:160px;
+  left:1225px;
+  width:100px;
+  height:55px;
+  background-color:#98FB98;
+  color: white;
+  font-size:16px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.blueRectangle{
+  position:absolute;
+  top:230px;
+  left:1225px;
+  width:100px;
+  height:55px;
+  background-color:#AFEEEE;
+  color: white;
+  font-size:16px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.brownRectangle{
+  position:absolute;
+  top:300px;
+  left:1225px;
+  width:100px;
+  height:55px;
+  background-color:#DEB887;
+  color: white;
+  font-size:16px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.greyRectangle{
+  position:absolute;
+  top:370px;
+  left:1225px;
+  width:100px;
+  height:55px;
+  background-color:#708090;
+  color: white;
+  font-size:16px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.circle1:before{
+  position:absolute;
+  top:486px;
+  left:1287px;
+  width:100px;
+  height:55px;
+  content:'\25CF';
+  background: rgba(0,0,0,0);
+  color: slategray;
+  font-size:150px;
+}
+.circle2:before{
+  position:absolute;
+  top:486px;
+  left:947px;
+  width:100px;
+  height:55px;
+  content:'\25CF';
+  background: rgba(0,0,0,0);
+  color: paleturquoise;
+  font-size:150px;
+}
+.circle3:before{
+  position:absolute;
+  top:486px;
+  left:607px;
+  width:100px;
+  height:55px;
+  content:'\25CF';
+  background: rgba(0,0,0,0);
+  color: #DEB887;
+  font-size:150px;
+}
+.circle4:before{
+  position:absolute;
+  top:486px;
+  left:267px;
+  width:100px;
+  height:55px;
+  content:'\25CF';
+  background: rgba(0,0,0,0);
+  color: #98FB98;
+  font-size:150px;
+}
