--- a/style.css
+++ b/style.css
@@ -1082,6 +1082,74 @@ body {
   height:300px;
   font-size:14px;
 } 
+/*Teach Cooking*/
+#container4 {
+  position:absolute;
+  top:100px;
+  left:100px;
+  margin: 0px auto;
+  width:475px;
+  height: 345px;
+  border: 1px solid #FFFFFF;
+}
+#tcimg1{
+  position:absolute;
+  top:100px;
+  left:590px;
+  width:270px;
+  height:210px;
+  border: 1px solid #FFFFFF;
+}
+#tcimg2{
+  position:absolute;
+  top:100px;
+  left:875px;
+  width:270px;
+  height:210px;
+  border: 1px solid #FFFFFF;
+}
+#tcimg3{
+  position:absolute;
+  top:100px;
+  left:1160px; 
+  width:270px;
+  height:210px;
+  border: 1px solid #FFFFFF;
+}
+#tcimg4{
+  position:absolute;
+  top:400px;
+  left:590px;
+  width:270px;
+  height:210px;
+  border: 1px solid #FFFFFF;
+}
+#tcimg5{
+  position:absolute;
+  top:400px;
+  left:875px;
+  width:270px;
+  height:210px;
+  border: 1px solid #FFFFFF;
+}
+#tcimg6{
+  position:absolute;
+  top:400px;
+  left:1160px;
+  width:270px;
+  height:210px;
+  border: 1px solid #FFFFFF;
+}
+#trecipe{
+  position:absolute;
+  top:450px;
+  left:100px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  width:475px;
+  height:300px;
+  font-size:14px;
+} 
 /* Cooking Info */
 .backButton1 button{
   position: absolute;
