--- a/style.css
+++ b/style.css
@@ -1347,3 +1347,84 @@ body {
   color: #98FB98;
   font-size:150px;
 }
+/* Sign Up Confirmation */
+#confTime{
+  position:absolute;
+  top:200px;
+  left:400px;
+  width:300px;
+  height:150px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  line-height:20px;
+  text-align:center;
+}
+#capacity{
+  position:absolute;
+  top:200px;
+  left:750px;
+  width:300px;
+  height:150px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  line-height:20px;
+  text-align:center;
+}
+#confDescription{
+  position:absolute;
+  top:400px;
+  left:400px;
+  width:300px;
+  height:300px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  line-height:20px;
+  text-align:center;
+}
+#confMaterials{
+  position:absolute;
+  top:400px;
+  left:750px;
+  width:300px;
+  height:300px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  line-height:20px;
+  text-align:center;
+}
+.homeButton button{
+  position:absolute;
+  top:725px;
+  left:675px;
+  width:100px;
+  height:55px;
+  background-color:#585858;
+  color: white;
+  font-size:16px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.homeButton button:hover{
+  background-color: #313131;
+  color: white;
+  align-content: center;
+}
+/* Other Registration */
+#className{
+  position: absolute;
+  top:125px;
+  left:280px;
+  width: 400px;
+  height:100px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+}
+#classCapacity{
+  position: absolute;
+  top:125px;
+  left:760px;
+  width: 400px;
+  height:100px;
+  background-color: #DAD8D8;
+  border: 1px solid #FFFFFF;
+}
