--- a/style.css
+++ b/style.css
@@ -1428,3 +1428,76 @@ body {
   background-color: #DAD8D8;
   border: 1px solid #FFFFFF;
 }
+.barRectangle{
+  position:absolute;
+  top:470px;
+  left:100px;
+  width:477px;
+  height:100px;
+  background-color:#D3D3D3;
+  color: white;
+  font-size:16px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.firstRectangle{
+  position:absolute;
+  top:495px;
+  left:138px;
+  width:80px;
+  height:50px;
+  background-color:#FFB6C1;
+  color: white;
+  font-size:16px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.secondRectangle{
+  position:absolute;
+  top:495px;
+  left:218px;
+  width:80px;
+  height:50px;
+  background-color:#ADD8E6;
+  color: white;
+  font-size:16px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.thirdRectangle{
+  position:absolute;
+  top:495px;
+  left:298px;
+  width:80px;
+  height:50px;
+  background-color:#90EE90;
+  color: white;
+  font-size:16px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.fourthRectangle{
+  position:absolute;
+  top:495px;
+  left:378px;
+  width:80px;
+  height:50px;
+  background-color:#F5DEB3;
+  color: white;
+  font-size:16px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+.fifthRectangle{
+  position:absolute;
+  top:495px;
+  left:458px;
+  width:80px;
+  height:50px;
+  background-color:#778899;
+  color: white;
+  font-size:16px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+
