--- a/style.css
+++ b/style.css
@@ -1550,3 +1550,71 @@ body {
   font-size:15px;
   text-align:center;
 }
+.name5{
+  position: absolute;
+  width: 313px;
+  height: 66.67px;
+  left: 1081px;
+  top: 401px;
+  background: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+#textname{
+  position: absolute;
+  width: 313px;
+  height: 66.67px;
+  left: 1081px;
+  top: 401px;
+  background: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+  line-height:15px;
+  font-size:15px;
+  text-align:center;
+}
+.step7{
+  position: absolute;
+  width: 313px;
+  height: 33px;
+  left: 1081px;
+  top: 340px;
+  font-size: 20px;
+  line-height: 33px;
+  text-align: center;
+  color: #000000;
+}
+.maxNumber{
+  position: absolute;
+  width: 313px;
+  height: 66.67px;
+  left: 1081px;
+  top: 534.33px;
+  background: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+}
+#textNumber{
+  position: absolute;
+  width: 313px;
+  height: 66.67px;
+  left: 1081px;
+  top: 534.33px;
+  background: #DAD8D8;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+  line-height:15px;
+  font-size:15px;
+  text-align:center;
+}
+.step8{
+  position: absolute;
+  width: 313px;
+  height: 66.67px;
+  left: 1081px;
+  top: 470px;
+  font-size: 20px;
+  line-height: 33px;
+  text-align: center;
+  color: #000000;
+}
