--- a/style.css
+++ b/style.css
@@ -1594,7 +1594,7 @@ body {
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
 }
-#textNumber{
+#numberNumber{
   position: absolute;
   width: 313px;
   height: 66.67px;
